--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>General multitool<br></h1>
+    <h1>Blue Lightning<br></h1>
     <a href="https://github.com/ZavrPrograms/General-Multitool/releases/download/General-Multitool/General.Multitool.V1.3.zip">
-    <button>Download</button>
+    <button>Download Blue lightning V1.0</button>
     </a>
     <h2>Update log: </h2>
-    <p>CURRENTLY IN DEVELOPMENT</p>
+    <p>Created website and blue lightning</p>
 </body>
 </html>
