--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Blue Lightning<br></h1>
-    <a href="https://github.com/ZavrPrograms/General-Multitool/releases/download/General-Multitool/General.Multitool.V1.3.zip">
+    <h1 style="color: rgb(0, 124, 196); font-size: 80px;">Blue Lightning<br></h1>
+    <a href="https://github.com/ZavrPrograms/Blue-Lightning/raw/refs/heads/main/Blue%20lightling.zip">
     <button>Download Blue lightning V1.0</button>
     </a>
     <h2>Update log: </h2>
