--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website :D</title>
+    <title>Blue Lightning</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style="color: rgb(0, 124, 196); font-size: 80px;">Blue Lightning<br></h1>
+    <h1 style="color: rgb(0, 124, 196); font-size: 80px; text-align: center;">Blue Lightning<br></h1>
     <a href="https://github.com/ZavrPrograms/Blue-Lightning/raw/refs/heads/main/Blue%20lightling.zip">
-    <button>Download Blue lightning V1.0</button>
+    <button class="btn">Download Blue lightning V1.0</button>
     </a>
     <h2>Update log: </h2>
     <p>Created website and blue lightning</p>
